<resources>
    <string name="app_name">SafePhoto</string>
    <string name="title_public_photos">Public Photos</string>
    <string name="title_private_photos">Private Photos</string>
    <string name="title_upload">Upload</string>
    <string name="title_search">Search</string>
    <string name="title_signin">Sign In</string>

    <string name="authentication_file">authentication_file</string>
    <string name="authentication_token">authentication_token</string>
    <string name="authentication_signin">Sign In</string>
    <string name="authentication_signout">Sign Out</string>
    <string name="authentication_success">Sign In Successful</string>
    <string name="authentication_failure">Sign In FAILED</string>
    <string name="authentication_pending">Signing In...</string>
    <string name="sign_in_email_title">Email</string>
    <string name="sign_in_password_title">Password</string>
    <string name="sign_up">Sign Up</string>



    <string name="intent_photos_updated">intent_photos_updated</string>
    <string name="intent_authentication_updated">intent_authentication_updated</string>

    <string name="take_picture_button">Take Picture</string>
    <string name="upload_instructions_text">Please sign in to upload photos.</string>
    <string name="upload_image">Upload Image</string>
    <string name="commit_upload_button">Commit Upload</string>
    <string name="upload_description">Description</string>
    <string name="radio_private">Private</string>
    <string name="radio_public">Public</string>
    <string name="upload_success">Successfully Uploaded</string>

    <string name="search_label">Safephoto</string>
    <string name="search_hint">Search for photos</string>
    <string name="settings_description">hahaha</string>

...
    <string name="auth_failed">Authentication failed</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
...
