<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_photos"
        android:icon="@android:drawable/picture_frame"
        android:title="@string/title_public_photos" />

    <item
        android:id="@+id/navigation_private_photos"
        android:icon="@android:drawable/picture_frame"
        android:title="@string/title_private_photos" />

    <item
        android:id="@+id/navigation_upload"
        android:icon="@android:drawable/stat_sys_upload"
        android:title="@string/title_upload" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_signin"
        android:icon="@android:drawable/ic_lock_lock"
        android:title="@string/title_signin" />

</menu>

