...
            android:inputType="textPassword"
            android:text="L921020zx!"
            android:background="#FFF"/>
    </LinearLayout>

    <Button
        android:id="@+id/sign_in_or_out_button"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/authentication_signin" />

    <Button
        android:id="@+id/signup_button"
...
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/sign_up"
        android:visibility="gone"/>

    <Button
        android:id="@+id/google_sign_in_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/google_sign_up" />

</LinearLayout>
